Fix aggregator.abstract class.

--- a/config/services/abstract.yaml
+++ b/config/services/abstract.yaml
@@ -1,6 +1,6 @@
 aggregator.abstract:
   abstract: true
-  class: WorldFactory\\Registry\\Services\\Aggregator
+  class: ROrier\Container\Services\Aggregator
   arguments: ["@container"]
   config:
     prefix: null
